--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "openai": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-slick": "^0.30.3",
     "slick": "^1.12.2",
     "slick-carousel": "^1.8.1"
